src/components/seekbar/_seekbar.scss
@import '~styles/variables';

.player .seek-bar {
  padding: 6px 0;
  cursor: pointer;
  position: relative;

  &:hover,
  &.hover,
  &.dragging-active {
    .time-preview,
    .frame-preview {
      display: block;
    }
    .progress-bar {
      .scrubber {
        transform: scale(1);
      }
      .virtual-progress {
        display: block;
      }
    }
  }

  &.ad-break {
    cursor: initial;

    .progress-bar .progress {
      background-color: $ads-color;
    }
  }

  &.live {
    .progress-bar .progress {
      background-color: $live-color;
    }
  }

  .progress-bar {
    height: $progress-bar-height;
    background-color: rgba(255, 255, 255, 0.3);
    border-radius: $progress-bar-border-radius;
    position: relative;

    .progress {
      position: absolute;
      top: 0;
      left: 0;
      height: 100%;
      z-index: 2;
      border-radius: $progress-bar-border-radius 0 0 $progress-bar-border-radius;
      background-color: $brand-color;
    }
    .virtual-progress {
      display: none;
    }
    .buffered, .virtual-progress {
      position: absolute;
      top: 0;
      left: 0;
      height: 100%;
      z-index: 1;
      border-radius: $progress-bar-border-radius 0 0 $progress-bar-border-radius;
      background-color: rgba(255, 255, 255, 0.3);
    }
    .scrubber {
      position: absolute;
      z-index: 3;
      cursor: pointer;
      display: block;
      top: -8px + $progress-bar-height / 2;
      right: -8px;
      border-radius: 8px;
      height: 16px;
      width: 16px;
      background-color: #FFFFFF;
      box-shadow: 0 0 31px 0 rgba(0, 0, 0, 0.3);
      transform: scale(0);
      transition: 100ms transform;

      &:active {
        opacity: 1;
        cursor: grabbing;
      }
    }
  }

  .frame-preview {
    position: absolute;
    bottom: $progress-bar-height + 12px;
    left: 0;
    height: 94px;
    width: 164px;
    border: 2px solid rgba(255, 255, 255, 0.2);
    border-radius: 4px;
    z-index: 10;

    .frame-preview-img {
      background-size: auto 100%;
      width: 100%;
      height: 100%;
      position: relative;
    }
  }

  .time-preview {
    position: absolute;
    bottom: $progress-bar-height + 18px;
    left: 0;
    z-index: 11;
    height: 22px;
    min-width: 48px;
    padding: 0 3px;
    text-align: center;
    border-radius: 3px;
    background-color: rgba(0, 0, 0, 0.7);
    font-size: 13px;
    font-weight: bold;
    line-height: 22px;
    color: #fff;
  }

  .time-preview,
  .frame-preview {
    display: none;
  }
}

.touch {
  .virtual-progress, .time-preview, .frame-preview {
    display: none !important;
  }
}

.player.size-sm {
  .virtual-progress, .time-preview, .frame-preview {
    display: none;
  }
}

